tests/baselines/reference/inheritedModuleMembersForClodule.errors.txt
tests/cases/compiler/inheritedModuleMembersForClodule.ts(7,7): error TS2417: Class static side '类为 D' incorrectly extends base class static side '类为 C'.
  Types of property 'foo' are incompatible.
    Type '() => 数字' is not assignable to type '() => 文字'.
      Type '数字' is not assignable to type '文字'.


==== tests/cases/compiler/inheritedModuleMembersForClodule.ts (1 errors) ====
    class C {
        static foo(): string {
            return "123";
        }
    }
    
    class D extends C {
          ~
!!! error TS2417: Class static side '类为 D' incorrectly extends base class static side '类为 C'.
!!! error TS2417:   Types of property 'foo' are incompatible.
!!! error TS2417:     Type '() => 数字' is not assignable to type '() => 文字'.
!!! error TS2417:       Type '数字' is not assignable to type '文字'.
    }
    
    module D {
        export function foo(): number {
            return 0;
        };
    }
    
    class E extends D {
        static bar() {
            return this.foo();
        }
    }
    